--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Yomogi&display=swap" rel="stylesheet">
     <link rel="icon" href="helmet.png" type="image/icon type">
-    <title>Kashif || Portfolio</title>
+    <title>Kashif | Best Dev.</title>
   </head>
   <body>
 
@@ -359,12 +359,12 @@
         </div>
         <div class="row projs2">
           <div class="col-lg-6 col-md-12">
-            <a href="#" title="Movie Website"><img src="pic1 (3).jpg" alt="Movie Website"></a><br>
-            <small style="color: #32C1CD;">Movie Website</small> <a href="" style="margin-left: 2px; color: #32C1CD;text-decoration: none;" class="fa fa-external-link"></a>
+            <a href="https://kashifal.github.io/guess-my-number/" title="Movie Website"><img src="pic1 (3).jpg" alt="Movie Website"></a><br>
+            <small style="color: #32C1CD;">Fun Project</small> <a href="" style="margin-left: 2px; color: #32C1CD;text-decoration: none;" class="fa fa-external-link"></a>
           </div>
           <div class="col-lg-6 col-md-12">
-            <a href="#" title="Blogging Website" ><img src="pic1 (4).jpg" alt=""></a><br>
-            <small style="color: #32C1CD;"> Blogging Website </small> <a href="" style="margin-left: 2px; color: #32C1CD;text-decoration: none;" class="fa fa-external-link"></a> 
+            <a href="https://kashifal.github.io/khadiKashif/" title="Blogging Website" ><img src="pic1 (4).jpg" alt=""></a><br>
+            <small style="color: #32C1CD;"> Landing Page's </small> <a href="" style="margin-left: 2px; color: #32C1CD;text-decoration: none;" class="fa fa-external-link"></a> 
           </div>
         </div>
       </div>
