--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
       <div class="container links">
         <div class="container row links1">
           <div class="col-lg-6">
-            <p><i class="fa fa-twitter"></i> http://twitter.com/solehry1429</p>
+            <p><i class="fa fa-twitter"></i> http://twitter.com/KashiCode</p>
           </div>
           <div class="col-lg-6">
-            <p><i class="fa fa-google"></i> todaykashif@gmail.com</p>
+            <p><i class="fa fa-google"></i> captainkashi4@gmail.com</p>
           </div>
         </div>
         <br><br>
@@ -397,7 +397,7 @@
             <p><i class="fa fa-instagram"></i> https://www.instagram.com/kashif1429/</p>
           </div>
           <div class="col-lg-6">
-            <p><i class="fa fa-github"></i> https://github.com/kashif1429</p>
+            <p><i class="fa fa-github"></i> https://github.com/kashifal</p>
           </div>
         </div>
 
