--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
   <center>
     <div class="container abli">
       <h1>Abilities</h1>
-      <p>“Life without knowledge is death in disguise.” <br>
-        - Talib Kweli</p>
+      <p>“when you succeed be Humble.” <br>
+        - Imam Ali (as)</p>
     </div>
   </center>
     <br> <br>
@@ -340,8 +340,8 @@
       <center>
         <div id="projects" class="container projects">
           <h1>Projects</h1>
-          <p>“You can do anything you set your mind to.”
-            - Benjamin Franklin</p>
+          <p>“You can get succeed If you are responsible.”
+            - My DAD</p>
         </div>
       </center>
       <center>
@@ -379,7 +379,7 @@
           <h1>Contact</h1>
           <br>
           <h4 style="font-size: 15px;">“If I had asked people what they wanted, they would have said faster horses. ” <br>
-            - Henry Ford</h4>
+            - anonymous</h4>
         </div>
       </center>
       <div class="container links">
