--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div id="overlay">
             <center>
                 <h1 class="h1">
-                    Kashif Solehry
+                    Kashi Script
                 </h1>
            
                 <h3 class="h3">
-                    Javascript Developer
+                    Javascript  Monster
                 </h3>
             </center>
         </div>
