--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div id="overlay">
             <center>
                 <h1 class="h1">
-                    Kashi Script
+                    Kashif Solehry
                 </h1>
            
                 <h3 class="h3">
-                    Javascript  Monster
+                    www.theloop.com
                 </h3>
             </center>
         </div>
@@ -54,7 +54,9 @@
         </center>   
     </div>
  
-
+    <div class="download_button">
+      <a href="HTML-CSS-CV.pdf" download> <i class="fa fa-download"></i> Download Resume</a>
+    </div>
     <div class="container grids">
         <div class="row">
           <div class="col-sm">
