--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </h1>
            
                 <h3 class="h3">
-                    www.theloop.com
+                    From Html To React 
                 </h3>
             </center>
         </div>
@@ -55,7 +55,7 @@
     </div>
  
     <div class="download_button">
-      <a href="HTML-CSS-CV.pdf" download> <i class="fa fa-download"></i> Download Resume</a>
+      <a href="HTML-CSS-CV.pdf" download>Download Resume</a>
     </div>
     <div class="container grids">
         <div class="row">
