--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div id="overlay">
             <center>
                 <h1 class="h1">
-                    Kashif Solehry
+                    Kashif Sulehria
                 </h1>
            
                 <h3 class="h3">
-                    From Html To React 
+                    From Html To React (Trailer Out)
                 </h3>
             </center>
         </div>
@@ -55,7 +55,7 @@
     </div>
  
     <div class="download_button">
-      <a href="HTML-CSS-CV.pdf" download>Download Resume</a>
+      <a href="HTML-CSS-CV.pdf" download>Resume</a>
     </div>
     <div class="container grids">
         <div class="row">
@@ -78,11 +78,11 @@
             <p> <strong>Name: </strong> <br>
                Kashif Solehry <br>
              <strong>Age: </strong> <br>
-                19 years <br>
+                20 years <br>
              <strong>Location: </strong> <br>
                 Lahore, Pakistan , Earth <br><br>
                 <a class="fa fa-twitter" href="https://twitter.com/KashiCode"></a>
-                <a href="https://www.instagram.com/kashif_sulehry/" class="fa fa-instagram"></a>
+                <a href="https://www.linkedin.com/in/kashif-sulehria-96540122b/" class="fa fa-linkedin"></a>
                 <a href="https://github.com/KashifAl" class="fa fa-github"></a>
             </p>
           </div>
