--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </h1>
            
                 <h3 class="h3">
-                    From Html To React (Trailer Out)
+                  Javascript Monster 
                 </h3>
             </center>
         </div>
@@ -76,7 +76,7 @@
           <div class="col-sm">
             <h1>Details</h1><br>
             <p> <strong>Name: </strong> <br>
-               Kashif Solehry <br>
+               Kashif Sulehria <br>
              <strong>Age: </strong> <br>
                 20 years <br>
              <strong>Location: </strong> <br>
