--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           </div>
           <div class="col-lg d-flex justify-content-center">
-            <img src="img1 (2).png" alt="">
+            <img src="main.jpg" alt="">
           </div>
           <div class="col-sm">
             <h1>Details</h1><br>
