--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
  
     <div class="download_button">
-      <a href="HTML-CSS-CV.pdf" download>Resume</a>
+      <a href="HTML-CSS-CV.pdf" download>Resume <i class="fa fa-download></i>"></a>
     </div>
     <div class="container grids">
         <div class="row">
@@ -71,7 +71,7 @@
 
           </div>
           <div class="col-lg d-flex justify-content-center">
-            <img src="main.jpg" alt="">
+            <img src="img1 (2).png" alt="">
           </div>
           <div class="col-sm">
             <h1>Details</h1><br>
