--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
  
     <div class="download_button">
-      <a href="HTML-CSS-CV.pdf" download>Resume <i class="fa fa-download></i>"></a>
+      <a href="HTML-CSS-CV.pdf" download>Resume</a>
     </div>
     <div class="container grids">
         <div class="row">
