--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <h1>Details</h1><br>
             <p> <strong>Name: </strong> <br>
                Kashif Sulehria <br>
-             <strong>Age: </strong> <br>
-                20 years <br>
+             <strong>Age:20 years </strong> <br>
+                 <br>
              <strong>Location: </strong> <br>
                 Lahore, Pakistan , Earth <br><br>
                 <a class="fa fa-twitter" href="https://twitter.com/KashiCode"></a>
