--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Yomogi&display=swap" rel="stylesheet">
     <link rel="icon" href="helmet.png" type="image/icon type">
-    <title>Kashif | Javascript Monster.</title>
+    <title>Kashif | Javascript Developer.</title>
   </head>
   <body>
 
@@ -40,7 +40,7 @@
                 </h1>
            
                 <h3 class="h3">
-                  Javascript Monster 
+                  Javascript Developer 
                 </h3>
             </center>
         </div>
@@ -49,13 +49,13 @@
         <center>
              <h1>Profile</h1>
             <br>
-            <h2>I'm a creative Javascripts developer!</h2>
+            <h2>ReactJS Developer</h2>
             <hr>
         </center>   
     </div>
  
     <div class="download_button">
-      <a href="HTML-CSS-CV.pdf" download>Resume</a>
+      <a href="Kashif Sulehria(3).pdf" download>Download</a>
     </div>
     <div class="container grids">
         <div class="row">
