--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
  
     <div class="download_button">
-      <a href="Kashif Sulehria(3).pdf" download>Download</a>
+      <a href="kashee.pdf" download>Download</a>
     </div>
     <div class="container grids">
         <div class="row">
