--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
               'two heads are better than one'.</p>
 
           </div>
-          <div class="col-lg d-flex justify-content-center">
-            <img src="img1 (2).png" alt="">
+          <div style="background-size:cover" class="col-lg d-flex justify-content-center">
+            <img  src="kashiff.jpg" alt="">
           </div>
           <div class="col-sm">
             <h1>Details</h1><br>
